# sec21.starter

./: CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
src/: config.h.in  generic_event.h  generic_transition.h  main.cpp  resource.qrc  window.cpp  window.h
tests/: CMakeLists.txt
